tools/node-depman/tests/snapshots/versions_test__node_depman_tool__pin_version__inserts_when_missing.snap
---
source: tools/node-depman/tests/versions_test.rs
expression: "fs::read_to_string(sandbox.path().join(\"package.json\")).unwrap()"
---
{
  "devEngines": {
    "packageManager": {
      "name": "npm",
      "version": ">=10"
    }
  }
}
